Fix tags wrapping on Safari

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -4,7 +4,7 @@ $base-font-family: "DM Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Ro
 $base-font-size: 16px !default;
 $base-font-weight: 400 !default;
 $small-font-size: $base-font-size * 0.875 !default;
-$base-line-height: 1.4 !default;
+$base-line-height: 1.5 !default;
 $spacing-unit: 16px !default;
 $brand-color: #ff4343 !default;
 $brand-color-darker: darken($brand-color, 90%) !default;
