--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -260,7 +260,6 @@
   color: white !important;
   display: block;
   @include relative-font-size(1);
-  line-height: 1.2;
 }
 
 .post-item {
